src/test/deca/syntax/valid/custom/return/return_readInt.deca
// Description:
//   Return with condition readInt().
// Results:
//
//
// History:
//    created on 13/01/2022

{
   return readInt() == 1;
}
