src/test/deca/syntax/invalid/custom/object/return_new.deca
// Description:
//   Return with condition new.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   return new () == 1;
}
